--- a/user_portrait/templates/portrait/detail/basic.html
+++ b/user_portrait/templates/portrait/detail/basic.html
@@ -142,7 +142,7 @@ margin-top:0px;
 }
 </style>
 
-<div id="Pdetail">
+
     <div class="modal fade" id="basic_info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
         <div class="modal-content" style="position: absolute;margin-top: 100px;margin-left: 300px;float :none;width: 670px;">
@@ -160,39 +160,55 @@ margin-top:0px;
         </div>
       </div>
     </div>
-    <div id="yesterday_influence" style="width:1000px;float:left;">
-        <div style="float:right;cursor: pointer" type="button" data-toggle="modal" data-target="#basic_info"><u>计算说明</u></div>
-        <h3>昨日影响力 (No.<span id="influence_index" style='color:red;'></span>/<span id='influence_total'></span>)</h3>
-        <hr>
-        <div id = "influence_table" style="width:100%;margin-bottom:-15px;"></div>
-        <div style = 'font-size:16px' id = "all_influenced_users_style0"></div>
-        <div style = 'font-size:16px'id = "all_influenced_users_style1"></div>
-        <div class="box-content" style="padding:0;margin:0;">
-            <ul class="nav nav-tabs" id="myTab" style="margin:10px 0;">
-                <li class="active" title="领域"><a href="#rewteet_origin" style="font-size:15px">被转发的原创微博</a></li>
-                <li title="话题"><a href="#comment_origin" style="font-size:15px">被评论的原创微博</a></li>
-                <li title="领域"><a href="#retweet_retweet" style="font-size:15px">被转发的转发微博</a></li>
-                <li title="话题"><a href="#comment_retweet" style="font-size:15px">被评论的转发微博</a></li>
-            </ul>
-            <div id="myTabContent" class="tab-content" style="margin:0;width:1000px;background-color:whitesmoke;">
-                <div class="tab-pane active" id="rewteet_origin" style="margin-top:10px;margin-bottom:0;">
-                  <div class="row category margin-bottom-20" id='influence_weibo1' style="margin:0;"></div>
+
+<h3  style="float:left;">影响力特征</h3>
+<div style="float:right;cursor: pointer" type="button" data-toggle="modal" data-target="#basic_info_info"><u>计算说明</u></div>
+
+<div id="framecontent" style="width:750px;">
+    <div class ="framepost">
+        <h3 class="title">昨日影响力 (No.<span id="influence_index" style='color:red;'></span>/<span id='influence_total'></span>)</h3>
+        <div  class="entry" style="width:55%;float:left;">
+          <div id = "influence_table" style="width:100%;margin-bottom:-15px;"></div>
+            <div style = 'font-size:16px' id = "all_influenced_users_style0"></div>
+            <div style = 'font-size:16px'id = "all_influenced_users_style1"></div>
+            <div class="box-content" style="padding:0;margin:0;">
+                <ul class="nav nav-tabs" id="myTab" style="margin:10px 0;">
+                    <li class="active" title="领域"><a href="#rewteet_origin" style="font-size:15px">被转发的原创微博</a></li>
+                    <li title="话题"><a href="#comment_origin" style="font-size:15px">被评论的原创微博</a></li>
+                    <li title="领域"><a href="#retweet_retweet" style="font-size:15px">被转发的转发微博</a></li>
+                    <li title="话题"><a href="#comment_retweet" style="font-size:15px">被评论的转发微博</a></li>
+                </ul>
+                <div id="myTabContent" class="tab-content" style="margin:0;width:750px;background-color:whitesmoke;">
+                    <div class="tab-pane active" id="rewteet_origin" style="margin-top:10px;margin-bottom:0;">
+                      <div class="row category margin-bottom-20" id='influence_weibo1' style="margin:0;"></div>
+                    </div>
+                    <div class="tab-pane" id="comment_origin" style="margin-top:10px;margin-bottom:0;">
+                      <div class="row category margin-bottom-20" id='influence_weibo2' style="margin:0;"></div>
+                    </div>
+                    <div class="tab-pane" id="retweet_retweet" style="margin-top:10px;margin-bottom:0;">
+                   <div class="row category margin-bottom-20" id='influence_weibo3' style="margin:0;"></div>
                 </div>
-                <div class="tab-pane" id="comment_origin" style="margin-top:10px;margin-bottom:0;">
-                  <div class="row category margin-bottom-20" id='influence_weibo2' style="margin:0;"></div>
+                <div class="tab-pane" id="comment_retweet" style="margin-top:10px;margin-bottom:0;">
+                  <div class="row category margin-bottom-20" id='influence_weibo4' style="margin:0;"></div>
                 </div>
-                <div class="tab-pane" id="retweet_retweet" style="margin-top:10px;margin-bottom:0;">
-               <div class="row category margin-bottom-20" id='influence_weibo3' style="margin:0;"></div>
-            </div>
-            <div class="tab-pane" id="comment_retweet" style="margin-top:10px;margin-bottom:0;">
-              <div class="row category margin-bottom-20" id='influence_weibo4' style="margin:0;"></div>
             </div>
         </div>
+        <div id="influence_conclusion" style="margin:0px;width:100%;">
+          <span class="fleft" style="margin-right:10px;width:32px;height:32px;background-image:url(/static/img/warning.png);margin-top:10px;display:black;"></span>
+          <h4 id="influence_conclusion_c" style="line-height:40px;"></h4>
+        </div>
+        </div>
     </div>
-    <div id="influence_conclusion" style="margin:0px;width:100%;">
-      <span class="fleft" style="margin-right:10px;width:32px;height:32px;background-image:url(/static/img/warning.png);margin-top:10px;display:black;"></span>
-      <h4 id="influence_conclusion_c" style="line-height:40px;"></h4>
-    </div>
+</div>
+
+
+
+
+
+<div id="Pdetail">
+
+    <div id="yesterday_influence" style="width:1000px;float:left;">
+
 
     <div style="font-size:16px;z-index:100;float:left;background-color:white;">
         <h3 style="margin-right:50px;">影响力走势图</h3>
